extend surefire plugin in spring-data-cosmos